@@ -40,8 +40,9 @@
   mingw32-libiconv.xml:2010090601
   mingw32-libtool.xml:2010092500
   mingw32-make.xml:2010070100
+  mingw32-mingw-get.xml:2010102900
   mingw32-mingw-utils.xml:2010090600
-  mingw32-package-list.xml:2010090603
+  mingw32-package-list.xml:2010102900
   mingw32-pdcurses.xml:2010090600
   mingw32-pexports.xml:2010090600
   mingw32-popt.xml:2010090600
