@@ -18,7 +18,7 @@
     </package-group>
   </package-group-hierarchy>
 
-  <!-- "real" packages ~~ those commented out are yet to be published -->
+  <!-- "real" packages ~~ any commented out are yet to be published -->
   <package-list catalogue="mingw32-autoconf" />
   <package-list catalogue="mingw32-automake" />
   <package-list catalogue="mingw32-basic-bsdtar" />
@@ -36,6 +36,7 @@
   <package-list catalogue="mingw32-libiconv" />
   <package-list catalogue="mingw32-libtool" />
   <package-list catalogue="mingw32-make" />
+  <package-list catalogue="mingw32-mingw-get" />
   <package-list catalogue="mingw32-mingw-utils" />
   <package-list catalogue="mingw32-mpc" />
   <package-list catalogue="mingw32-mpfr" />
